<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content" >

    <TextView
        android:id="@+id/customdialog_title"
        style="@style/dialog_title_text_style"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/str_choose_plan" />

    <ImageView
        android:id="@+id/customdialog_title_line"
        android:layout_width="match_parent"
        android:layout_height="1dip"
        android:layout_below="@id/customdialog_title"
        android:layout_marginLeft="10dip"
        android:layout_marginRight="10dip"
        android:background="@color/white"
        android:gravity="fill_horizontal"
        android:scaleType="fitXY" />

    <LinearLayout
        android:id="@+id/customdialog_btn_bar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/customdialog_btn_ok"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:background="@drawable/selector_common_btn"
            android:text="@string/str_confirm" />

        <Button
            android:id="@+id/customdialog_btn_neutral"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:background="@drawable/selector_common_btn"
            android:text="@string/str_delete"
            android:visibility="gone" />

        <Button
            android:id="@+id/customdialog_btn_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/selector_common_btn"
            android:text="@string/str_cancel" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/customdialog_container"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/customdialog_btn_bar"
        android:layout_below="@id/customdialog_title_line"
        android:layout_gravity="bottom"
        android:layout_marginTop="20dp" />

</RelativeLayout>