<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_dialog"
    android:orientation="vertical" >

    <TextView
        style="@style/dialog_title_text_style"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/app_name" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1dip"
        android:layout_marginLeft="10dip"
        android:layout_marginRight="10dip"
        android:background="@color/white"
        android:gravity="fill_horizontal"
        android:scaleType="fitXY" />

    <TextView
        android:id="@+id/alarm_taskname"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"
        android:textColor="@color/white"
        android:textSize="18sp" />

    <LinearLayout
        style="@android:style/ButtonBar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/alarm_btn_snooze"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:minWidth="100dp"
            android:text="@string/str_snooze" />

        <Button
            android:id="@+id/alarm_btn_dismiss"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:minWidth="100dp"
            android:text="@string/str_dismiss" />
    </LinearLayout>

</LinearLayout>