<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_frag_task_detail"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/taskdetail_dialog_name"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/taskdetail_dialog_detail"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:textColor="@color/black" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center_vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_level"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/taskdetail_dialog_level"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:textColor="@color/black" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/taskdetail_dialog_plan_panel"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center_vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_task_plan"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/taskdetail_dialog_plan"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text=""
                android:textColor="@color/black" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/taskdetail_dialog_createtime_panel"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center_vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_task_createtime"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/taskdetail_dialog_createtime"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:textColor="@color/black" />
        </LinearLayout>

        <TextView
            android:id="@+id/taskdetail_dialog_alarm_time_textview"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/str_alarm"
            android:textColor="@color/black" />

        <include
            android:id="@+id/taskdetail_dialog_alarm"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            layout="@layout/list_child_alarm" />

        <Button
            android:id="@+id/taskdetail_dialog_btn_back"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/selector_common_btn"
            android:text="@string/str_back" />
    </LinearLayout>

</ScrollView>