<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:id="@+id/taskdetail_head"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@drawable/shape_title"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <ImageButton
            android:id="@+id/taskdetail_btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/selector_title_btn"
            android:contentDescription="@null"
            android:src="@drawable/btn_back" />

        <TextView
            style="@style/title_text_style"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="8"
            android:gravity="center"
            android:text="@string/title_task_detail" />

        <ImageButton
            android:id="@+id/taskdetail_btn_menu"
            style="@style/title_text_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/selector_title_btn"
            android:contentDescription="@null"
            android:src="@drawable/btn_menu" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/taskdetail_btn_bar"
        style="@android:style/ButtonBar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true" >

        <Button
            android:id="@+id/taskdetail_btn_previous"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/selector_common_btn"
            android:drawableLeft="@drawable/btn_previous_item"
            android:text="@string/previous_one" />

        <Button
            android:id="@+id/taskdetail_btn_next"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/selector_common_btn"
            android:drawableRight="@drawable/btn_next_item"
            android:text="@string/next_one" />
    </LinearLayout>

    <FrameLayout
        android:id="@+id/taskdetail_frag_container"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/taskdetail_btn_bar"
        android:layout_below="@id/taskdetail_head"
        android:padding="6dp" />

</RelativeLayout>