<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/plandetail_head"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_title"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <ImageButton
            android:id="@+id/plandetail_btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/selector_title_btn"
            android:contentDescription="@null"
            android:src="@drawable/btn_back" />

        <TextView
            style="@style/title_text_style"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="8"
            android:gravity="center"
            android:text="@string/title_plan_detail" />

        <ImageButton
            android:id="@+id/plandetail_btn_menu"
            style="@style/title_text_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/selector_title_btn"
            android:contentDescription="@null"
            android:src="@drawable/btn_menu" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="6dp"
        android:background="@drawable/shape_frag_task_detail"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/plandetail_plan_name"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/plandetail_detail_panel"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center_vertical"
            android:orientation="vertical" >

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/str_plan_detail"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/plandetail_detail"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/plandetail_createtime_panel"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center_vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_plan_createtime"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/plandetail_createtime"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:textColor="@color/black" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginBottom="6dp"
        android:layout_marginLeft="6dp"
        android:layout_marginRight="6dp"
        android:background="@drawable/shape_frag_task_detail"
        android:orientation="vertical" >

        <Button
            android:id="@+id/plandetail_add_task"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/selector_common_btn"
            android:drawableLeft="@android:drawable/ic_menu_add"
            android:gravity="left|center_vertical"
            android:text="@string/str_add_task" />

        <ListView
            android:id="@+id/plandetail_task_listview"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:divider="@drawable/list_divider" />
    </LinearLayout>

</LinearLayout>